Fix dashboard repository list item text-overflow

--- a/app/javascript/styles/dashboard.scss
+++ b/app/javascript/styles/dashboard.scss
@@ -70,6 +70,9 @@
   .repo-list {
     .repo-item {
       margin-bottom: 10px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
 
       .divider {
         color: $text-gray;
